# kea

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lcovrc  .readthedocs.yaml  .swp  .uncrustify.cfg  ATTACHED  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  Code_of_conduct.md  Dangerfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  SECURITY.md  clang-format  code_of_conduct.md  config-report.sh.in  config.h.in  configure  configure.ac  contributors-guide.md  cpp-driver.rb  dns++.pc.in  fix-distdir.sh  hammer.py  install-meson-info.sh.in  kea_version.h  kea_version.h.in  meson-config.h.in  meson-kea_version.h.in  meson.build  meson.format  (+5 more)
compatcheck/: .gitignore  Makefile.am  README  sqlite3-difftbl-check.py.in
doc/: .gitignore  Doxyfile  Makefile.am  api.xml  differences.txt  fuzz.txt  make-grammar.sh.in  meson.build  version.ent.in
doc/api/: _template.json  build-report.json  cache-clear.json  cache-insert.json  cache-load.json  cache-remove.json  cache-size.json  cache-write.json  class-add.json  class-del.json  class-get.json  class-list.json  class-update.json  config-get.json  config-reload.json  config-set.json  config-test.json  config-write.json  dhcp-disable.json  dhcp-enable.json  ha-heartbeat.json  ha-scopes.json  lease4-add.json  lease4-del.json  lease4-get-all.json  lease4-get.json  lease4-update.json  lease4-wipe.json  lease6-add.json  lease6-bulk-apply.json  lease6-del.json  lease6-get-all.json  lease6-get.json  lease6-update.json  lease6-wipe.json  leases-reclaim.json  libreload.json  list-commands.json  network4-add.json  network4-del.json  (+86 more)
doc/design/: Makefile.am  cc-protocol.txt  ipc-high-2.txt  ipc-high.txt
doc/design/datasrc/: .gitignore  Makefile.am  auth-local.txt  auth-mapped.txt  data-source-classes.txt  memmgr-mapped-init.txt  memmgr-mapped-reload.txt  overview.txt
doc/design/resolver/: 01-scaling-across-cores  02-mixed-recursive-authority-setup  03-cache-algorithm  03-cache-algorithm.txt  README
doc/devel/: 00-mainpage.dox  01-dns.dox  02-dhcp.dox  Doxyfile  Makefile.am  README  bison.dox  changelog.dox  config-backend.dox  congestion-handling.dox  contribute.dox  cross-compile.dox  debug.dox  doc.dox  fuzz.dox  mainpage.dox  make-devel.sh.in  meson.build  performance.dox  qa.dox  terminology.dox  unit-tests.dox
doc/devel/images/: appendRequestedOptions.uml  appendRequestedVendorOptions.uml  assign-lease.uml  assign-lease4.uml  buildCfgOptionList.uml  currentHost4.uml  packet4.uml  (+6 more)
doc/docgen/: .gitignore  Makefile.am  cmds-list  generate-templates  kea_docgen.cc
doc/guide/: .gitignore  Makefile  Makefile.am  admin.rst  admin.xml  agent.rst  agent.xml  api.rst  api.xml  bind10-guide.html  bind10-guide.txt  bind10-guide.xml  bind10-messages.html  bind10-messages.xml  classify.rst  classify.xml  conf.py  config-backend.rst  config-backend.xml  config.rst  config.xml  congestion-handling.rst  congestion-handling.xml  ctrl-channel.rst  ctrl-channel.xml  ddns.rst  ddns.xml  dhcp4-srv.rst  dhcp4-srv.xml  dhcp6-srv.rst  dhcp6-srv.xml  faq.xml  hammer.rst  hammer.xml  hooks-cb-cmds.rst  hooks-cb-cmds.xml  hooks-class-cmds.rst  hooks-class-cmds.xml  hooks-ha.rst  hooks-ha.xml  (+37 more)
doc/sphinx/: .gitignore  Makefile.am  api-files.txt  api2doc.py  conf.py  config-examples.rst  debug-messages.rst  grabber.sh  index.rst  install-docs.sh.in  kea-messages.rst  make-doc.sh.in  make-install.sh.in  make-mes-doc.sh.in  make-uml.sh.in  make-update-python-dependencies.sh.in  manpages.rst  mes-files.txt  mes2doc.py  mes_files.mk  meson.build  regen-doc.sh.in  system_messages.py  umls.rst  update-python-dependencies.sh.in
doc/userguide/: Makefile  STYLEGUIDE  userguide.css  userguide.xml
examples/: COPYING  INSTALL  Makefile.am  README  configure.ac
examples/host/: .gitignore  Makefile.am  host.cc
examples/m4/: ax_boost_include.m4  ax_isc_bind10.m4  ax_isc_rpath.m4
feng-authnotify/: ChangeLog  INSTALL  Makefile.am  configure.ac
fuzz/: .gitignore  Makefile.am  fuzz.cc  fuzz.h  fuzz_config_kea_dhcp4.cc  fuzz_config_kea_dhcp6.cc  fuzz_http_endpoint.cc  fuzz_http_endpoint_kea_dhcp4.cc  fuzz_http_endpoint_kea_dhcp6.cc  fuzz_packets_kea_dhcp4.cc  fuzz_packets_kea_dhcp6.cc  fuzz_unix_socket_kea_dhcp4.cc  fuzz_unix_socket_kea_dhcp6.cc  install-input.sh.in  kea-dhcp4.h  kea-dhcp6.h  libfuzzer.sh  main.cc  meson.build  setup.sh
fuzz/input/: Makefile.am  kea-dhcp4.conf  kea-dhcp6.conf  meson.build  regenerate-cpp-sources.sh
fuzz/tests/: Makefile.am  meson.build  setup.sh  test-fuzz-packets-kea-dhcp6.sh  test_fuzz_packets_kea_dhcp6.sh
src/lib/: Makefile.am  Makefile.in  meson.build
subprojects/krb5/: check-heimdal.sh  meson.build
subprojects/mysql/: meson.build
subprojects/netconf/: meson.build
subprojects/postgresql/: meson.build
tests/system/: .gitignore  Makefile.am  README  cleanall.sh  conf.sh.in  digcomp.pl  ifconfig.sh  run.sh  run.sh.in  runall.sh  start.pl  stop.pl  testsock.pl
tools/: .generated-files.txt  .gitignore  Makefile.am  README  add-config-examples-to-arm.py  add-config-h.sh  add-config.h  amend-gitattributes.sh  bump-lib-versions.sh  bump_lib_versions.sh  changelog_lint.py  check-for-duplicate-includes.sh  check-for-json-errors-in-doc.sh  check-for-missing-api-commands.sh  check-lib-dependencies.sh  check-messages.py  check-messages.sh  clang-format.sh  copy-dir.sh.in  cql_config  cql_config_defines.sh  cql_config_defines.sh.sample  exhonerated-duplicate-messages.txt  exonerated-duplicate-messages.txt  extract_bnf.sh.in  find-uninstalled-headers.py  git-hooks-install  git-obsolete-branch.py  import_boost.sh  kt_system_messages.cc  meson.build  mk_cfgrpt.sh  mk_cfgrpt.sh.in  path_replacer.sh.in  print-generated-files.sh  reorder_message_file.py  rs-tool.py  shellcheck-all.sh  sysrepo_config  sysrepo_config_defines.sh.sample  (+6 more)
tools/cmd-docgen/: .gitignore  Makefile.am  cmd_docgen.cc  generate-templates  kea_docgen.cc
tools/git-hooks/: prepare-commit-msg
tools/kea-breeder/: kb.py  mappings.json
tools/query_cmp/: README
tools/usermgr/: README  usermgr.py
tools/usr_mgr/: README  usr_mgr.py
(+7228 files in other folders)
